syntax = "proto3";
package ShareRing.shareledger.asset;

import "gogoproto/gogo.proto";
import "asset/tx.proto";
import "google/api/annotations.proto";
// import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/ShareRing/Shareledger/x/asset/types";

// Query defines the gRPC querier service.
service Query {
    rpc AssetByUUID(QueryAssetByUUIDRequest) returns (QueryAssetByUUIDResponse) {
        option (google.api.http).get = "/shareledger/asset/{uuid}";
    }
}

message QueryAssetByUUIDRequest {
	option (gogoproto.equal)           = false;
	option (gogoproto.goproto_getters) = false;

	string uuid = 1;
}

message QueryAssetByUUIDResponse {
	Asset asset = 1;
}